remove chino office added contact info

--- a/index.html
+++ b/index.html
@@ -76,6 +76,11 @@
             <li class="navbar-item"><a id="helpful_links">網頁聯結</a></li>
             <div id="white-spacer"></div>
             -->
+            <li class="navbar-item"><a id="contact_info">联系方式</a></li>
+            <div id="white-spacer"></div>
+
+
+
 
             <div id="blue-spacer-2"></div>
           </ul>
