--- a/contact_info.html
+++ b/contact_info.html
@@ -7,23 +7,48 @@
     <h4>診 所 聯 繫 方 式</h4>
     <h4>妇产专科姜禮明醫師Dr. Frank Chiang, M.D.</h4>
     <h4>Board Certified , OB-GYN</h4>
-    <h4>中文網站: www.9999ob.com</h4>
+    <h4>中文網站: <a href="http://www.9999ob.com">www.9999ob.com</a></h4>
     </td>
   </tr>
   <tr>
     <td>
-    <b>Pomona诊所地址： 160 E Artesia Street Suite#330, Pomona, CA 91767</b> <br />
-    医生在Pomona 看诊时间： 周一全天 10:00am - 3:30pm <br />
-    电话： 909-622- 5654 <br />
-    周三全天 10:00am - 3:30pm <br />
+<b>Pomona诊所地址： 160 E Artesia Street Suite#330, Pomona, CA 91767</b>
+      <table>
+        <tbody>
+        <tr>
+          <td valign="top">医生在Pomona 看诊时间：</td>
+          <td valign="top">周一全天 10:00am - 3:30pm <br />
+            <ul style="list-style: none;">
+              <li>电话： 909-622- 5654 </li>
+              <li>周三全天 10:00am - 3:30pm </li>
+            </ul>
+          </td>
+        </tr>
+      </tbody>
+      </table>
+
     </td>
+
+
+
   </tr>
   <tr>
     <td>
-      <b>Ontario 诊所地址：756 N Euclid Avenue Suit A, Ontario ,CA 91762</b>
-      医生在Ontario 看诊时间： 周二全天 10:00am - 3:30pm<br />
-      电话：909-395- 0030<br />
-      周五半天 10:00am - 1:30pm<br />
+
+<b>Ontario 诊所地址：756 N Euclid Avenue Suit A, Ontario ,CA 91762</b>
+            <table>
+              <tbody>
+              <tr>
+                <td valign="top">医生在Ontario 看诊时间： </td>
+                <td valign="top">周二全天 10:00am - 3:30pm <br />
+                  <ul style="list-style: none;">
+                    <li>电话：909-395-0030 </li>
+                    <li>周五半天 10:00am - 1:30pm</li>
+                  </ul>
+                </td>
+              </tr>
+            </tbody>
+            </table>
     </td>
   </tr>
   <tr>
@@ -35,14 +60,14 @@
   <tr>
     <td>
 
-      <table>
+      <table class="table table-bordered">
         <caption>電話中文服務時間</caption>
 
         <tbody>
 
         <tr>
           <td>中文电话: 909-972- 8064</td>
-          <td>周一，周三中文专线时间：10：00am - 5:00pm</td>
+          <td>周一，周三中文专线时间：10:00am - 5:00pm</td>
         </tr>
         <tr>
           <td>中文短訊聯絡電話：909-660- 2496</td>
