update text minor bug fix

--- a/contact_info.html
+++ b/contact_info.html
@@ -19,7 +19,7 @@
           <td valign="top">医生在Pomona 看诊时间：</td>
           <td valign="top">周一全天 10:00am - 3:30pm <br />
             <ul style="list-style: none;">
-              <li>电话： 909-622- 5654 </li>
+              <li>电话： 909-622-5654 </li>
               <li>周三全天 10:00am - 3:30pm </li>
             </ul>
           </td>
@@ -53,7 +53,7 @@
   </tr>
   <tr>
     <td>
-      姜医生仅去Pomona医院接生。医院的参观预约电话是：909-865- 9858。每个月有一次有中
+      姜医生仅去Pomona医院接生。医院的参观预约电话是：909-865-9858。每个月有一次有中
       文服务的参观时间。
     </td>
   </tr>
@@ -65,10 +65,14 @@
 
         <tbody>
 
+        <!--
+
         <tr>
-          <td>中文电话: 909-972- 8064</td>
+          <td>中文电话: 909-972-8064</td>
           <td>周一，周三中文专线时间：10:00am - 5:00pm</td>
         </tr>
+        --> 
+
         <tr>
           <td>中文短訊聯絡電話：909-660- 2496</td>
           <td>每次短讯都請留下您的漢語拼音姓名和生日<br />
