--- a/pricing_tab.html
+++ b/pricing_tab.html
@@ -70,7 +70,8 @@
   <tr>
     <th colspan="3" width="60%">
       <h1>
-      合作醫院 <br> 波莫納醫院 <br>
+      生產醫院 <!--合作醫院--> 
+      <br> 波莫納醫院 <br>
       <small>
       Pomona Valley Hospital Medical Center <br>
       住址: 1798 N. Garey Avenue Pomona, Ca 91767 <br>
@@ -78,7 +79,7 @@
       </small>
       </h1>
     </th>
-    <th colspan="1">**醫院提供三層完整的NICU以及嬰兒監護中心。<br>
+    <th colspan="1">**醫院提供三層完整的NICU以及嬰兒監護中心, 以及重創中心<br>
       www.pvhmc.org
     </th>
 
@@ -86,14 +87,14 @@
   <tr>
     <td colspan="2" width="50%">
       <h2>
-      順產  (住院三天兩晚/ 72小時) $5,500 <br>
+      順產  (住院三天兩晚<!--/ 72小時 -->) $5,500 <br>
       <small> &nbsp; &nbsp; (過午夜算一天)</small> <br>
       <small> &nbsp; &nbsp; **無痛分娩麻醉設備費$500 </small>
       </h2>
     </td>
     <td colspan="2">
       <h2>
-      剖腹產 (住院四天三晚/ 96 小 時) $7,000 <br>
+      剖腹產 (住院四天三晚<!--/ 96 小 時-->) $7,000 <br>
       <small> &nbsp; &nbsp; (過午夜算一天)</small> <br>
       <small> &nbsp; &nbsp; **無痛分娩麻醉設備費包含在內 </small>
       </h2>
