--- a/contact_info.html
+++ b/contact_info.html
@@ -10,7 +10,20 @@
     <h4>中文網站: <a href="http://www.9999ob.com">www.9999ob.com</a></h4>
     </td>
   </tr>
+
+  周一至周五9am-1pm, 2pm-5pm，  909-622-5654
+如需中文服务，来电时先按0，然后请说Chinese, 电话即会转到中文人员线上
+中文联络时间：周一  10:00am - 1:00pm ,  2:00pm-5:00pm    电话： 909-622-5654
+                          	             	 	              周三  10:00am - 1:00pm ,  2:00pm-5:00pm    电话： 909-622-5654
+				               周五  10:00am - 1:00pm   电话：909-395-0030
+
   <tr>
+	医生在Pomona 看诊时间： 周一全天  10:00am - 3:30pm
+                                    		        		周三全天  10:00am - 3:30pm
+                                                        		电话： 909-622-5654
+Pomona诊所地址： 160 E Artesia Street Suite#330, Pomona, CA 91767
+
+    <!--
     <td>
 <b>Pomona诊所地址： 160 E Artesia Street Suite#330, Pomona, CA 91767</b>
       <table>
@@ -30,9 +43,16 @@
     </td>
 
 
-
+  -->
   </tr>
   <tr>
+
+医生在Ontario 看诊时间：  周二全天  10:00am - 3:30pm
+                                     		         		周五半天  10:00am - 1:30pm
+                                                              		电话：909-395-0030
+Ontario 诊所地址：756 N Euclid Avenue Suit A, Ontario, CA 91762
+
+    <!--
     <td>
 
 <b>Ontario 诊所地址：756 N Euclid Avenue Suit A, Ontario ,CA 91762</b>
@@ -50,6 +70,7 @@
             </tbody>
             </table>
     </td>
+  -->
   </tr>
   <tr>
     <td>
@@ -71,7 +92,7 @@
           <td>中文电话: 909-972-8064</td>
           <td>周一，周三中文专线时间：10:00am - 5:00pm</td>
         </tr>
-        --> 
+        -->
 
         <tr>
           <td>中文短訊聯絡電話：909-660- 2496</td>
