--- a/contact_info.html
+++ b/contact_info.html
@@ -8,19 +8,75 @@
     <h4>妇产专科姜禮明醫師Dr. Frank Chiang, M.D.</h4>
     <h4>Board Certified , OB-GYN</h4>
     <h4>中文網站: <a href="http://www.9999ob.com">www.9999ob.com</a></h4>
+    <h4>英文網站: <a href="http://www.femcare-md.com">www.femcare-md.com</a></h4>
     </td>
   </tr>
+
+
+  <tr>
+    <h4>周一至周五9am-1pm, 2pm-5pm，  909-622-5654</h4>
+  </tr>
+
   <tr>
     <td>
-<b>Pomona诊所地址： 160 E Artesia Street Suite#330, Pomona, CA 91767</b>
+    <h4>如需中文服务，来电时先按0，然后请说Chinese, 电话即会转到中文人员线上</h4>
+    <h4>中文联络时间:</h4>
+    <ul style="list-style: none;">
+      <li>周一  10:00am - 1:00pm,  2:00pm-5:00pm    电话： 909-622-5654</li>
+      <li>周三  10:00am - 1:00pm,  2:00pm-5:00pm    电话： 909-622-5654</li>
+      <li>周五  10:00am - 1:00pm,   电话：909-395-0030</li>
+    </ul>
+    </td>
+  </tr>
+
+
+  <tr>
+    <td>
+      <table class="table table-bordered">
+        <caption>電話中文服務時間</caption>
+
+        <tbody>
+
+        <!--
+
+        <tr>
+          <td>中文电话: 909-972-8064</td>
+          <td>周一，周三中文专线时间：10:00am - 5:00pm</td>
+        </tr>
+        -->
+
+
+
+        <tr>
+          <td>中文短訊聯絡電話：909-660- 2496</td>
+          <td>每次短讯都請留下您的漢語拼音姓名和生日<br />
+              我们在24-48 小时內会与您联絡</td>
+        </tr>
+      </tbody>
+      </table>
+
+
+    </td>
+  </tr>
+
+
+
+
+
+
+
+  <tr>
+    <td>
+      <b>Pomona诊所地址： 160 E Artesia Street Suite#330, Pomona, CA 91767</b>    
       <table>
         <tbody>
         <tr>
           <td valign="top">医生在Pomona 看诊时间：</td>
-          <td valign="top">周一全天 10:00am - 3:30pm <br />
+          <td valign="top">
             <ul style="list-style: none;">
-              <li>电话： 909-622-5654 </li>
-              <li>周三全天 10:00am - 3:30pm </li>
+              <li> 周一全天  10:00am - 3:30pm</li>
+              <li>周三全天  10:00am - 3:30pm</li>
+              <li>电话： 909-622-5654</li>
             </ul>
           </td>
         </tr>
@@ -34,8 +90,7 @@
   </tr>
   <tr>
     <td>
-
-<b>Ontario 诊所地址：756 N Euclid Avenue Suit A, Ontario ,CA 91762</b>
+      <b>Ontario 诊所地址：756 N Euclid Avenue Suit A, Ontario ,CA 91762</b>
             <table>
               <tbody>
               <tr>
@@ -57,31 +112,6 @@
       文服务的参观时间。
     </td>
   </tr>
-  <tr>
-    <td>
 
-      <table class="table table-bordered">
-        <caption>電話中文服務時間</caption>
-
-        <tbody>
-
-        <!--
-
-        <tr>
-          <td>中文电话: 909-972-8064</td>
-          <td>周一，周三中文专线时间：10:00am - 5:00pm</td>
-        </tr>
-        -->
-
-        <tr>
-          <td>中文短訊聯絡電話：909-660- 2496</td>
-          <td>每次短讯都請留下您的漢語拼音姓名和生日<br />
-              我们在24-48 小时內会与您联絡</td>
-        </tr>
-      </tbody>
-      </table>
-
-    </td>
-  </tr>
 </tbody>
 </table>
