--- a/contact_info.html
+++ b/contact_info.html
@@ -3,10 +3,10 @@
 <tbody>
 
   <tr>
-    <td>
-    <h4>診 所 聯 繫 方 式</h4>
-    <h4>妇产专科姜禮明醫師Dr. Frank Chiang, M.D.</h4>
-    <h4>Board Certified , OB-GYN</h4>
+    <td align="center">
+    <h2>診 所 聯 繫 方 式</h2>
+    <h3>妇产专科姜禮明醫師 <strong>Dr. Frank Chiang, M.D.</strong></h3>
+    <h3>Board Certified , OB-GYN</h3>
     <h4>中文網站: <a href="http://www.9999ob.com">www.9999ob.com</a></h4>
     <h4>英文網站: <a href="http://www.femcare-md.com">www.femcare-md.com</a></h4>
     </td>
