--- a/contact_info.html
+++ b/contact_info.html
@@ -3,12 +3,12 @@
 <tbody>
 
   <tr>
-    <td align="center">
-    <h2>診 所 聯 繫 方 式</h2>
-    <h3>妇产专科姜禮明醫師 <strong>Dr. Frank Chiang, M.D.</strong></h3>
-    <h3>Board Certified , OB-GYN</h3>
-    <h4>中文網站: <a href="http://www.9999ob.com">www.9999ob.com</a></h4>
-    <h4>英文網站: <a href="http://www.femcare-md.com">www.femcare-md.com</a></h4>
+    <td>
+    <h2 align="center">診 所 聯 繫 方 式</h2>
+    <h3 align="center">妇产专科姜禮明醫師 <strong>Dr. Frank Chiang, M.D.</strong></h3>
+    <h3 align="center">Board Certified , OB-GYN</h3>
+    <h4 align="center">中文網站: <a href="http://www.9999ob.com">www.9999ob.com</a></h4>
+    <h4 align="center">英文網站: <a href="http://www.femcare-md.com">www.femcare-md.com</a></h4>
     </td>
   </tr>
 
@@ -22,12 +22,20 @@
   <tr>
     <td>
     <h4>如需中文服务，来电时先按0，然后请说Chinese, 电话即会转到中文人员线上</h4>
-    <h4>中文联络时间:</h4>
-    <ul style="list-style: none;">
-      <li>周一  10:00am - 1:00pm,  2:00pm-5:00pm    电话： 909-622-5654</li>
-      <li>周三  10:00am - 1:00pm,  2:00pm-5:00pm    电话： 909-622-5654</li>
-      <li>周五  10:00am - 1:00pm,   电话：909-395-0030</li>
-    </ul>
+    <table>
+      <tbody>
+      <tr>
+        <td valign="top"><h4>中文联络时间:</h4></td>
+        <td valign="top">
+          <ul style="list-style: none;">
+            <li>周一  10:00am - 1:00pm,  2:00pm-5:00pm    电话： 909-622-5654</li>
+            <li>周三  10:00am - 1:00pm,  2:00pm-5:00pm    电话： 909-622-5654</li>
+            <li>周五  10:00am - 1:00pm,   电话：909-395-0030</li>
+          </ul>
+        </td>
+      </tr>
+    </tbody>
+    </table>
     </td>
   </tr>
 
