--- a/contact_info.html
+++ b/contact_info.html
@@ -43,7 +43,7 @@
   <tr>
     <td>
       <table class="table table-bordered">
-        <caption>電話中文服務時間</caption>
+        <!--<caption>電話中文服務時間</caption>-->
 
         <tbody>
 
@@ -116,12 +116,13 @@
             </table>
     </td>
   </tr>
+  <!--
   <tr>
     <td>
       姜医生仅去Pomona医院接生。医院的参观预约电话是：909-865-9858。每个月有一次有中
       文服务的参观时间。
     </td>
   </tr>
-
+-->
 </tbody>
 </table>
