--- a/pricing_tab.html
+++ b/pricing_tab.html
@@ -33,9 +33,12 @@
   </tr>
   <tr>
     <td>
-      <h2>
-      剖腹產 $3,200</td>
-      </h2>
+      <h2>剖腹产</h2>
+      <h2>$3,500</h2>
+      <h2>若选择剖</h2>
+      <h2>转顺另加</h2>
+      <h2>$700</h2>
+    </td>
     <td>
       <h2>
       剖腹助理醫師 $200
@@ -51,17 +54,6 @@
         剖腹無痛分娩 $1000+ <br />
         <small>&nbsp; &nbsp; *麻醉醫師費用</small>
       </h2>
-  </tr>
-  <tr>
-    <td>
-      <h2>
-        前胎剖腹, <br>
-        第二胎想順產 $3,900
-      </h2>
-    </td>
-    <td></td>
-    <td></td>
-    <td></td>
   </tr>
 </table>
 <hr >
@@ -102,6 +94,7 @@
   </tr>
 
   <caption align="bottom">
-    *如果有任何問題, 歡迎您來洽詢。我們的宗旨是好好的照顧孕婦以及希望孕婦有美好的生產經驗。以上各項收費僅供參考。 以各具體收費部門的要求為準。
+    *如果有任何问题,欢迎您洽询。我们的宗旨是好好地照顾孕妇以及希望孕妇有美好的生产经验。<br />
+    以上各项收费仅供参考,以各具体收费部门的要求为准。并且大家各自作业,请付费相应部门。
   </caption>
 </table>
