--- a/contact_info.html
+++ b/contact_info.html
@@ -1,130 +1,66 @@
 <table class="table table-striped">
 
-<tbody>
+  <tbody>
 
-  <tr>
-    <td>
-    <h2 align="center">診 所 聯 繫 方 式</h2>
-    <h3 align="center">妇产专科姜禮明醫師 <strong>Dr. Frank Chiang, M.D.</strong></h3>
-    <h3 align="center">Board Certified , OB-GYN</h3>
-    <h4 align="center">中文網站: <a href="http://www.9999ob.com">www.9999ob.com</a></h4>
-    <h4 align="center">英文網站: <a href="http://www.femcare-md.com">www.femcare-md.com</a></h4>
-    </td>
-  </tr>
-
-
-  <tr>
-    <td>
-    <h4>周一至周五9am-1pm, 2pm-5pm，  909-622-5654</h4>
-    </td>
-  </tr>
-
-  <tr>
-    <td>
-    <h4>如需中文服务，来电时先按0，然后请说Chinese, 电话即会转到中文人员线上</h4>
-    <table>
-      <tbody>
-      <tr>
-        <td valign="top"><h4>中文联络时间:</h4></td>
-        <td valign="top">
-          <ul style="list-style: none;">
-            <li>周一  10:00am - 1:00pm,  2:00pm-5:00pm    电话： 909-622-5654</li>
-            <li>周三  10:00am - 1:00pm,  2:00pm-5:00pm    电话： 909-622-5654</li>
-            <li>周五  10:00am - 1:00pm,   电话：909-395-0030</li>
-          </ul>
-        </td>
-      </tr>
-    </tbody>
-    </table>
-    </td>
-  </tr>
+    <tr>
+      <td>
+        <h2 align="center">診所聯繫方式</h2>
+        <h3 align="center">妇产专科姜禮明醫師 <strong>Dr. Frank Chiang, M.D.</strong></h3>
+        <h3 align="center">Board Certified , OB-GYN</h3>
+        <h4 align="center">中文網站: <a href="http://www.9999ob.com">www.9999ob.com</a></h4>
+        <h4 align="center">英文網站: <a href="http://www.femcare-md.com">www.femcare-md.com</a></h4>
+      </td>
+    </tr>
 
 
-  <tr>
-    <td>
-      <table class="table table-bordered">
-        <!--<caption>電話中文服務時間</caption>-->
+    <tr>
+      <td>
+        <h4>看诊时间:</h4>
+      </td>
+      <td>
+        <h4>周一: 11:00am-4:00pm , Ontario</h4>
+        <h4>周三: 10:00am-3:30pm , Pomona</h4>
+        <h4>周五: 10:00am-1:30pm , Ontario</h4>
+      </td>
+    </tr>
 
-        <tbody>
+    <tr>
+      <td>
+        Pomona 诊所地址:
+      </td>
+      <td>
+        160 E Artesia Street Suite #330, Pomone, CA 91767
+      </td>
+    </tr>
 
-        <!--
-
-        <tr>
-          <td>中文电话: 909-972-8064</td>
-          <td>周一，周三中文专线时间：10:00am - 5:00pm</td>
-        </tr>
-        -->
-
-
-
-        <tr>
-          <td>中文短訊聯絡電話：909-660- 2496</td>
-          <td>每次短讯都請留下您的漢語拼音姓名和生日<br />
-              我们在24-48 小时內会与您联絡</td>
-        </tr>
-      </tbody>
-      </table>
-
-
-    </td>
-  </tr>
-
-
+    <tr>
+      <td>
+        电话:
+      </td>
+      <td>
+        909-622-5654
+      </td>
+    </tr>
 
 
+    <tr>
+      <td>
+        Ontario 诊所地址:
+      </td>
+      <td>
+        756 Nuclid Avenue Suit A, Ontario, CA 91762
+      </td>
+    </tr>
 
+    <tr>
+      <td>
+        电话:
+      </td>
+      <td>
+        909-395-0030
+      </td>
+    </tr>
 
-
-  <tr>
-    <td>
-      <table>
-        <tbody>
-        <tr>
-          <td valign="top">医生在Pomona 看诊时间：</td>
-          <td valign="top">
-            <ul style="list-style: none;">
-              <li> 周一全天  10:00am - 3:30pm</li>
-              <li>周三全天  10:00am - 3:30pm</li>
-              <li>电话： 909-622-5654</li>
-            </ul>
-          </td>
-        </tr>
-      </tbody>
-      </table>
-      <b>Pomona诊所地址： 160 E Artesia Street Suite#330, Pomona, CA 91767</b>
-      
-
-    </td>
-
-
-
-  </tr>
-  <tr>
-    <td>
-            <table>
-              <tbody>
-              <tr>
-                <td valign="top">医生在Ontario 看诊时间： </td>
-                <td valign="top">周二全天 10:00am - 3:30pm <br />
-                  <ul style="list-style: none;">
-                    <li>电话：909-395-0030 </li>
-                    <li>周五半天 10:00am - 1:30pm</li>
-                  </ul>
-                </td>
-              </tr>
-            </tbody>
-            </table>
-            <b>Ontario 诊所地址：756 N Euclid Avenue Suit A, Ontario ,CA 91762</b>
-
-    </td>
-  </tr>
-  <!--
-  <tr>
-    <td>
-      姜医生仅去Pomona医院接生。医院的参观预约电话是：909-865-9858。每个月有一次有中
-      文服务的参观时间。
-    </td>
-  </tr>
--->
-</tbody>
+    
+  </tbody>
 </table>
