--- a/contact_info.html
+++ b/contact_info.html
@@ -1,66 +1,143 @@
-<table class="table table-striped">
+<html lang="zh-CN">
+<meta charset="utf-8">
 
-  <tbody>
 
+
+<style>
+  .center {
+    text-align: center;
+  }
+
+  .right {
+    text-align: right;
+  }
+
+  .left {
+    text-align: left;
+  }
+
+  td {
+    vertical-align: top;
+  }
+
+  .grey {
+    background-color: lightgrey;
+  }
+
+  table {
+    border-collapse: collapse;
+  }
+  .border {
+    border: 1px solid black;
+  }
+
+  .horizontal {
+    width: 45vw;
+  }
+</style>
+
+
+<!-- header -->
+<div class="center">
+  <h1>診所聯繫方式</h1>
+  <h2>妇产专科姜禮明醫師 Dr. Frank Chiang, M.D.</h2>
+  <h2>Board Certified , OB-GYN </h2>
+  <div>
+    中文網站: www.9999ob.com<br />
+    中文網站: femcare-md.com
+  </div>
+</div>
+
+<br />
+
+<!-- times -->
+<div class="center grey">
+  <table>
     <tr>
+      <td><strong>看诊时间: </strong>&nbsp; &nbsp; &nbsp;</td>
       <td>
-        <h2 align="center">診所聯繫方式</h2>
-        <h3 align="center">妇产专科姜禮明醫師 <strong>Dr. Frank Chiang, M.D.</strong></h3>
-        <h3 align="center">Board Certified , OB-GYN</h3>
-        <h4 align="center">中文網站: <a href="http://www.9999ob.com">www.9999ob.com</a></h4>
-        <h4 align="center">英文網站: <a href="http://www.femcare-md.com">www.femcare-md.com</a></h4>
+        周一 11:00am-4:00pm , Ontario <br />
+        周三 10:00am-3:30pm , Pomona <br />
+        周五 10:00am-1:30pm , Ontario <br />
       </td>
     </tr>
+  </table>
+</div>
 
 
+
+<br />
+
+<!-- offices -->
+<div>
+  <table>
+    <tr>
+      <td class="right"><strong>Pomona</strong> 诊所地址: </td>
+      <td>160 E Artesia Street Suite #330, Pomona, CA 91767</td>
+    </tr>
+    <tr>
+      <td class="right">电话: </td>
+      <td> 909-622-5654</td>
+    </tr>
+    <tr>
+      <td class="right"><strong>Ontario</strong> 诊所地址: </td>
+      <td>756 Nuclid Avenue Suit A, Ontario, CA 91762</td>
+    </tr>
+    <tr>
+      <td class="right">电话: </td>
+      <td>909-395-0030</td>
+    </tr>
+  </table>
+</div>
+
+<br />
+
+<!-- times and telephone -->
+<div class="grey">
+  <table>
     <tr>
       <td>
-        <h4>看诊时间:</h4>
+        <strong>
+        中文预约联络时间:
+      </strong>
       </td>
       <td>
-        <h4>周一: 11:00am-4:00pm , Ontario</h4>
-        <h4>周三: 10:00am-3:30pm , Pomona</h4>
-        <h4>周五: 10:00am-1:30pm , Ontario</h4>
+        周一 10:00am - 1:00pm,2:00pm-5:00pm <br />
+        周三 10:00am - 1:00pm , 2:00pm-5:00pm <br />
+        周五 10:00am - 1:00pm  <br />
+      </td>
+      <td>
+          电话:909-395-0030 <br />
+          电话:909-622-5654 <br />
+          电话:909-395-0030 <br />
+
       </td>
     </tr>
+  </table>
+</div>
 
+<br />
+<!-- text -->
+<div>
+  姜医生仅去 Pomona Halley Medical Center 医院接生。医院的参观预约电话是:909 865-9858。医院每月提供两次有中文服务的参观时间,即第一个和第三个星期五。 <br />
+  为方便病人,我们会提供一些 Pomona 医院的资料,具体详情还请病人直接接洽医院。 <br />
+  如何到达诊所,请点击我们中文网站 www.9999ob.com 提供的网上地图链接并参照网上提供的行车路线。
+</div>
+
+<br />
+
+<!-- footer -->
+<div class="grey">
+  <table>
     <tr>
-      <td>
-        Pomona 诊所地址:
+      <td class="border horizontal">
+        中文短訊聯絡電話: 909-660-2496
       </td>
-      <td>
-        160 E Artesia Street Suite #330, Pomone, CA 91767
-      </td>
-    </tr>
-
-    <tr>
-      <td>
-        电话:
-      </td>
-      <td>
-        909-622-5654
+      <td class="border">
+        任何时间可以发短讯,24小时之内会收到回
+        复。每次短讯都請留下您的漢語拼音姓名和
+        生日。
       </td>
     </tr>
-
-
-    <tr>
-      <td>
-        Ontario 诊所地址:
-      </td>
-      <td>
-        756 Nuclid Avenue Suit A, Ontario, CA 91762
-      </td>
-    </tr>
-
-    <tr>
-      <td>
-        电话:
-      </td>
-      <td>
-        909-395-0030
-      </td>
-    </tr>
-
-    
-  </tbody>
-</table>
+  </table>
+</div>
